Reintegrated Camera2API
Fixes
1. crashing on record finish
2. closing app on record finish
3. recorded video files now scanned to gallery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
     <string name="intro_message">intro message</string>
     <string name="start">Start</string>
+    <string name="test">test</string>
 </resources>
