--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="test">test</string>
     <string name="Camera">Camera</string>
     <string name="Videos">Videos</string>
+    <string name="internet_message">Sorry, Hypeman requires an internet connection to work, please try again with internet connected.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
